--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,16 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              // "./node_modules/bootstrap/dist/css/bootstrap-grid.min.css"
+              
+             
             ],
-            "scripts": []
+            "scripts": [
+              //  "./node_modules/bootstrap/dist/js/bootstrap-grid.js"
+               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              ]
           },
           "configurations": {
             "production": {
