--- a/angular.json
+++ b/angular.json
@@ -28,13 +28,11 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              // "./node_modules/bootstrap/dist/css/bootstrap-grid.min.css"
-              
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
              
             ],
             "scripts": [
-              //  "./node_modules/bootstrap/dist/js/bootstrap-grid.js"
+          
                "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
               ]
           },
